@@ -24,6 +24,13 @@
   into the forbidden path (try to say this fast and 4 times in a
   row).
 - Bugfix: Removing of message keys should work again.
+- Bugfix: Duplicate messages will not be displayed anymore.
+- Bugfix: Fixed a possible fatal, when trying to analyse dynamically
+  declared properties, which have a name collusion with private
+  properties somewhere deeper in the class inheritance.
+- Bugfix: Detect unset properties in classes.
+- Bugfix: Added closing style tags to both skins
+- Bugfix: Catch throwable in PHP 7.
 
 2.4.0
 - Added the method analysis to the recursion detection, to prevent
